# Food_Classfication_cal_nutrition

./: .gitignore  README.md  pyproject.toml
chroma_db/: chroma.sqlite3
src/: analyzer.py  api.py  config.py  db.py  ingest.py  llm_fallback.py  main.py  retriever.py  vision.py
